# kinder-baselines

./: README.md
experiments/geom_fidelity/: bench_load.py  bench_reset.py  prepare_assets.py  run_cluster_experiment.py  run_experiment.py  run_row_experiment.py
experiments/geom_fidelity/assets/aabb/: 002_master_chef_can_aabb.json  006_mustard_bottle_aabb.json  011_banana_aabb.json  021_bleach_cleanser_aabb.json  025_mug_aabb.json  077_rubiks_cube_aabb.json
experiments/geom_fidelity/assets/urdf/: 002_master_chef_can_box.urdf  002_master_chef_can_vhacd.urdf  006_mustard_bottle_box.urdf  006_mustard_bottle_vhacd.urdf  011_banana_box.urdf  011_banana_vhacd.urdf  021_bleach_cleanser_box.urdf  021_bleach_cleanser_vhacd.urdf  025_mug_box.urdf  025_mug_vhacd.urdf  077_rubiks_cube_box.urdf  077_rubiks_cube_vhacd.urdf
experiments/geom_fidelity/results/: cluster_calibration.csv  cluster_results.csv  geom_fidelity_results.csv  reset_bench.csv  row_results.csv  row_sweep.csv
kinder-bilevel-planning/: pyproject.toml
kinder-bilevel-planning/experiments/: collect_demos_with_skills.py  run_experiment.py  run_noisy_experiments.py
kinder-bilevel-planning/experiments/conf/: config.yaml
kinder-bilevel-planning/experiments/conf/env/: prpl3d-o1.yaml  prpl3d-o2.yaml
kinder-bilevel-planning/scripts/: run_dynpushpullhook2d.sh
kinder-bilevel-planning/skill_demos/: DynObstruction2D-o1-v0_seed1687664015.pkl  DynPushPullHook2D-o5-v0_seed649952284.pkl
kinder-bilevel-planning/src/kinder_bilevel_planning/: logging_sampler.py
kinder-bilevel-planning/src/kinder_bilevel_planning/env_models/dynamic2d/: dynobstruction2d.py  dynpushpullhook2d.py
kinder-bilevel-planning/src/kinder_bilevel_planning/env_models/dynamic3d/: tidybot3d_base_motion.py  tidybot3d_shelf3D.py
kinder-bilevel-planning/src/kinder_bilevel_planning/env_models/kinematic3d/: prpl3d.py
kinder-bilevel-planning/tests/env_models/dynamic2d/: test_dynobstruction2d.py  test_dynpushpullhook2d.py
kinder-bilevel-planning/tests/env_models/dynamic3d/: test_tidybot3d_base_motion.py
kinder-bilevel-planning/tests/env_models/kinematic2d/: test_motion2d.py
kinder-blockly/: pyproject.toml
kinder-ds-policies/: pyproject.toml
kinder-imitation-learning/: README.md  pyproject.toml
kinder-mbrl/: pyproject.toml
kinder-models/: pyproject.toml
kinder-models/scripts/: inference.py  teleop.py
kinder-models/src/kinder_models/dynamic2d/dyn_obstruction2d/: parameterized_skills.py
kinder-models/src/kinder_models/dynamic2d/dyn_pushpullhook2d/: parameterized_skills.py
kinder-models/src/kinder_models/dynamic3d/shelf/: parameterized_skills.py
kinder-models/src/kinder_models/dynamic3d/sweep3D/: parameterized_skills.py
kinder-models/src/kinder_models/dynamic3d/tossing/: parameterized_skills.py
kinder-models/src/kinder_models/kinematic3d/prpl3d/: parameterized_skills.py
kinder-models/tests/: test_utils.py
kinder-models/tests/dynamic2d/: test_dynobstruction2d_parameterized_skills.py  test_dynpushpullhook2d_parameterized_skills.py
kinder-models/tests/dynamic3d/: test_dynamic3d_utils.py
kinder-models/tests/dynamic3d/shelf/: test_shelf_state_abstractions.py
kinder-models/tests/dynamic3d/tossing/: test_tossing_parameterized_skills.py
kinder-models/tests/test_tasks/: tidybot-base_motion-o1.json
kinder-rl/: pyproject.toml
kinder-trajopt/: pyproject.toml
kinder-trajopt/experiments/conf/env/: dynpushpullhook2d-o5-model.yaml  shelf3d-o1-model.yaml  sweepintodrawer3d-o5-model.yaml  transport3d-o2-model.yaml
kinder-trajopt/scripts/: run_all_wm_envs.py
kinder-vlm-planning/: README.md  pyproject.toml
kinder-vlm-planning/experiments/: run_experiment.py
kinder-vlm-planning/experiments/conf/: config.yaml
kinder-vlm-planning/experiments/conf/env/: SweepIntoDrawer3D-o5-v0.yaml
kinder-vlm-planning/src/kinder_vlm_planning/: agent.py  env_controllers.py  in_context_examples_loader.py  utils.py
kinder-vlm-planning/src/kinder_vlm_planning/in_context_examples/dynamic2d/: dyn_obstruction2d.md  dyn_pushpullhook2d.md  dyn_pusht2d.md  dyn_scooppour2d.md
kinder-vlm-planning/src/kinder_vlm_planning/in_context_examples/dynamic3d/: shelf3d.md  sweepintodrawer3d.md
kinder-vlm-planning/src/kinder_vlm_planning/in_context_examples/kinematic2d/: clutteredretrieval2d.md  clutteredstorage2d.md  motion2d.md  obstruction2d.md  pushpullhook2d.md  stickbutton2d.md
kinder-vlm-planning/src/kinder_vlm_planning/in_context_examples/kinematic3d/: base_motion3d.md  ground3d.md  motion3d.md  obstruction3d.md  packing3d.md  shelf3d.md  table3d.md  transport3d.md
kinder-vlm-planning/src/kinder_vlm_planning/prompts/: llmplanner_planning_prompt.txt
kinder-vlm-planning/tests/: test_env_controllers.py
