[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kinder_vlm_planning"
version = "0.1.0"
description = "VLM planning baselines for kinder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "matplotlib",
   "numpy",
   "pandas",
   "pandas-stubs",
   "hydra-core",
   "hydra-joblib-launcher",
   "omegaconf",
   "kindergarden>=0.0.11",
   "prpl_llm_utils@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git#subdirectory=prpl-llm-utils",
   "bilevel_planning>=0.1.2",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kinder_vlm_planning = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
]
ignore_missing_imports = true
